feat: Search field on buy page

--- a/buy.html
+++ b/buy.html
@@ -1,44 +1,115 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Buy</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="main.js"></script>
-  </head>
-  <body>
-    <nav class="navbar">
-      <div class="logo">
-        <a href="#"><img src="images/logo.png" alt="Logo" /></a>
-      </div>
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="buy.html">Buy</a></li>
-        <li><a href="#">Sell</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav-right">
-        <li><a href="#">Login</a></li>
-        <li><a href="#">Sign Up</a></li>
-      </ul>
-    </nav>
 
-    <div class="container">
-        <h3>
-            Search from a catalog of over 20,000 cars in Australia
-        </h3>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Buy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+</head>
+
+<body>
+  <nav class="navbar">
+    <div class="logo">
+      <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="buy.html">Buy</a></li>
+      <li><a href="#">Sell</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <ul class="nav-right">
+      <li><a href="#">Login</a></li>
+      <li><a href="#">Sign Up</a></li>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <h2>
+      Search from a catalog of over 20,000 cars in Australia
+    </h2>
+
+    <form>
+      <input type="text" name="search" placeholder="Search..">
+    </form>
+
+    <br>
+
+
+    <div class="row">
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/mitsubishi-outlander.png" />
+          <h4>2012 Mitsubishi Outlander</h4>
+          <h5>$21,000</h5>
+          <p>📍 Chatswood, NSW</p>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/subaru-outback.png" />
+          <h4>2021 Subaru Outback</h4>
+          <h5>$32,000</h5>
+          <p>📍 Florey, ACT</p>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/mitsubishi-outlander.png" />
+          <h4>2012 Nissan Micra</h4>
+          <h5>$16,000</h5>
+          <p>📍 Casey, ACT</p>
+        </div>
+      </div>
+
     </div>
 
-    <footer>
-      <p>
-        &copy 2024 Aussie Car Sales<br />
-        <a href="mailto:info@aussiecarsales.com.au"
-          >info@aussiecarsales.com.au</a
-        >
-      </p>
-    </footer>
-  </body>
+    <div class="row">
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/subaru-outback.png" />
+          <h4>2012 Mitsubishi Outlander</h4>
+          <h5>$21,000</h5>
+          <p>📍 Chatswood, NSW</p>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/mitsubishi-outlander.png" />
+          <h4>2021 Subaru Outback</h4>
+          <h5>$32,000</h5>
+          <p>📍 Florey, ACT</p>
+        </div>
+      </div>
+
+      <div class="col-4">
+        <div class="car-card" onclick="window.open('car-detail.html', '_self')">
+          <img src="images/mitsubishi-outlander.png" />
+          <h4>2012 Nissan Micra</h4>
+          <h5>$16,000</h5>
+          <p>📍 Casey, ACT</p>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <footer>
+    <p>
+      &copy 2024 Aussie Car Sales<br />
+      <a href="mailto:info@aussiecarsales.com.au">info@aussiecarsales.com.au</a>
+    </p>
+  </footer>
+</body>
+
+<script type="text/javascript" src="js/main.js"></script>
+
 </html>
