--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- <meta charset='utf-8'> -->
   <!-- <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-  <title>Aussie Cars</title>
+  <title>Aussie Car Sales</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
@@ -48,8 +48,7 @@
           <img src="images/mitsubishi-outlander.png" />
           <h4>2012 Mitsubishi Outlander</h4>
           <h5>$21,000</h5>
-          <p>Chatswood, NSW</p>
-          <!-- <a href="#" class="details-btn" target="_self">View Details</a> -->
+          <p>📍 Chatswood, NSW</p>
         </div>
       </div>
 
@@ -58,7 +57,7 @@
           <img src="images/subaru-outback.png" />
           <h4>2021 Subaru Outback</h4>
           <h5>$32,000</h5>
-          <p>Florey, ACT</p>
+          <p>📍 Florey, ACT</p>
         </div>
       </div>
 
@@ -67,7 +66,7 @@
           <img src="images/mitsubishi-outlander.png" />
           <h4>2012 Nissan Micra</h4>
           <h5>$16,000</h5>
-          <p>Casey, ACT</p>
+          <p>📍 Casey, ACT</p>
         </div>
       </div>
     </div>
