--- a/buy.html
+++ b/buy.html
@@ -19,7 +19,6 @@
       <li><a href="buy.html">Buy</a></li>
       <li><a href="#">Sell</a></li>
       <li><a href="about.html">About</a></li>
-      <li><a href="#">Contact</a></li>
     </ul>
     <ul class="nav-right">
       <li><a href="login.html">Login</a></li>
@@ -32,7 +31,7 @@
       Search from a catalog of over 20,000 cars in Australia
     </h2>
 
-    <form>`
+    <form>
       <div class="row">
       
         <div class="col-70" style="padding-right: 48px;">
