--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
             Sales & Marketing Head
           </p>
           <ul>
-            <li><a href="https://ravipun.com.np">Website</a></li>`
+            <li><a href="https://ravipun.com.np">Website</a></li>
             <li><a href="https://linkedin.com/in/r1249">LinkedIn</a></li>
             <li><a href="https://twitter.com/ravigarbuja">Twitter</a></li>
           </ul>
