feat: Redirect to add car page on login success

--- a/buy.html
+++ b/buy.html
@@ -12,12 +12,12 @@
 <body>
   <nav class="navbar">
     <div class="logo">
-      <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+      <a href="index.html"><img src="images/logo.png" alt="Logo" /></a>
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="buy.html">Buy</a></li>
-      <li><a href="#">Sell</a></li>
+      <li><a href="login.html">Sell</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
     <ul class="nav-right">
