--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+            <a href="index.html"><img src="images/logo.png" alt="Logo" /></a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
@@ -28,7 +28,7 @@
 
     <div class="container">
 
-        <form name="loginForm" onsubmit="return validateLoginFields()" id="login-form">
+        <form name="loginForm" onsubmit="validateLoginFields()" id="login-form">
             <h2>
                 Login to buy and sell cars
             </h2>
@@ -46,7 +46,7 @@
                     <label for="password">Password</label>
                 </div>
                 <div class="col-70">
-                    <input type="password" id="password" name="pnumber" placeholder="Password">
+                    <input type="password" id="password" name="password" placeholder="Password">
                 </div>
             </div>
 
