--- a/signup.html
+++ b/signup.html
@@ -12,12 +12,12 @@
 
     <nav class="navbar">
         <div class="logo">
-            <a href="#"><img src="images/logo.png" alt="Logo" /></a>
+            <a href="index.html "><img src="images/logo.png" alt="Logo" /></a>
         </div>
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="buy.html">Buy</a></li>
-            <li><a href="#">Sell</a></li>
+            <li><a href="login.html">Sell</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
         <ul class="nav-right">
@@ -31,6 +31,7 @@
         <form name="registrationForm" onsubmit="return validateSignupFields()" id="signup-form">
             Fill up the form to register an account on Car Sales Australia and enjoy buying and listing cars for free.
 
+            <br>
             <div class="row">
                 <div class="col-30">
                     <label for="name">Full Name</label>
