--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
       <li><a href="buy.html">Buy</a></li>
-      <li><a href="#">Sell</a></li>
+      <li><a href="login.html">Sell</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
     <ul class="nav-right">
