feat: Search car form and validation

--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
             <li>List cars for free if youre not a company. 😌</li>
             <li>We manage all the paperworks. 🧘</li>
           </ul>
-          <a href="sell.html" class="btn" target="_self">Learn more</a>
+          <a href="login.html" class="btn" target="_self">Learn more</a>
         </div>
       </div>
     </div>
