--- a/buy.html
+++ b/buy.html
@@ -31,17 +31,21 @@
       Search from a catalog of over 20,000 cars in Australia
     </h2>
 
-    <form>
+    <form name="searchCarForm">
       <div class="row">
-      
-        <div class="col-70" style="padding-right: 48px;">
-            <input type="text" id="searchKeyword" name="searchKeyword" placeholder="Search Keyword">
+
+        <div class="col-6" style="padding-right: 48px;">
+          <input type="text" id="searchKeyword" name="searchKeyword" placeholder="Search Keyword">
         </div>
 
-        <div class="col-30">
-          <input type="text" id="location" name="location" placeholder="Location">
+        <div class="col-3">
+          <input type="text" id="searchLocation" name="searchLocation" placeholder="Location">
+        </div>
+
+        <div class="col-3">
+          <button value="Go" class="btn" style="margin-top: 0px; padding: 8px 20px; width: 100%;" onclick="return validateSearchCarForm()">Go</button>
+        </div>
       </div>
-    </div>
 
     </form>
 
