chore: Different car pictures

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
+          <img src="images/cars/mitsubishi-outlander.png" />
           <h4>2012 Mitsubishi Outlander</h4>
           <h5>$21,000</h5>
           <p>📍 Chatswood, NSW</p>
@@ -53,7 +53,7 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/subaru-outback.png" />
+          <img src="images/cars/subaru-outback.png" />
           <h4>2021 Subaru Outback</h4>
           <h5>$32,000</h5>
           <p>📍 Florey, ACT</p>
@@ -62,10 +62,10 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
-          <h4>2012 Nissan Micra</h4>
-          <h5>$16,000</h5>
-          <p>📍 Casey, ACT</p>
+          <img src="images/cars/kia-sportage.jpg" />
+          <h4>2018 Kia Sportage</h4>
+          <h5>$21,000</h5>
+          <p>📍 Franklin, ACT</p>
         </div>
       </div>
     </div>
