--- a/buy.html
+++ b/buy.html
@@ -56,7 +56,7 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
+          <img src="images/cars/mitsubishi-outlander.png" />
           <h4>2012 Mitsubishi Outlander</h4>
           <h5>$21,000</h5>
           <p>📍 Chatswood, NSW</p>
@@ -65,7 +65,7 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/subaru-outback.png" />
+          <img src="images/cars/subaru-outback.png" />
           <h4>2021 Subaru Outback</h4>
           <h5>$32,000</h5>
           <p>📍 Florey, ACT</p>
@@ -74,10 +74,10 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
-          <h4>2012 Nissan Micra</h4>
-          <h5>$16,000</h5>
-          <p>📍 Casey, ACT</p>
+          <img src="images/cars/kia-sportage.jpg" />
+          <h4>2018 Kia Sportage</h4>
+          <h5>$21,000</h5>
+          <p>📍 Franklin, ACT</p>
         </div>
       </div>
 
@@ -87,28 +87,28 @@
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/subaru-outback.png" />
-          <h4>2012 Mitsubishi Outlander</h4>
-          <h5>$21,000</h5>
-          <p>📍 Chatswood, NSW</p>
+          <img src="images/cars/landcruiser.jpg" />
+          <h4>2018 Toyota Landcruiser</h4>
+          <h5>$72,000</h5>
+          <p>📍 Geelong, VIC</p>
         </div>
       </div>
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
-          <h4>2021 Subaru Outback</h4>
-          <h5>$32,000</h5>
-          <p>📍 Florey, ACT</p>
+          <img src="images/cars/xtrail.jpg" />
+          <h4>2019 Nissan X-Trail</h4>
+          <h5>$29,000</h5>
+          <p>📍 Brisbane, QLD</p>
         </div>
       </div>
 
       <div class="col-4">
         <div class="car-card" onclick="window.open('car-detail.html', '_self')">
-          <img src="images/mitsubishi-outlander.png" />
-          <h4>2012 Nissan Micra</h4>
-          <h5>$16,000</h5>
-          <p>📍 Casey, ACT</p>
+          <img src="images/cars/civic.jpg" />
+          <h4>2023 Honda Civic Type-R</h4>
+          <h5>$78,000</h5>
+          <p>📍 Manly, NSW</p>
         </div>
       </div>
 
