fix: Reword about paragraphs

--- a/about.html
+++ b/about.html
@@ -31,27 +31,26 @@
     <h1 class="gradient-heading" style="position: relative">
       Aussie Car Sales
     </h1>
+    <img src="images/logo.png" style="height: 200px; width: auto;" cap>
+    <figcaption>Aussie Car Sales &#8482;</figcaption>
 
     <p>
-      Welcome to Auzzie Car Sales, founded in 2024 by a group of young
-      entrepreneurs who share the same passion for cars as you do.
-      <br />
-      We may be young, but we have plenty of experience selling cars. We aim
-      to be the top car sales company in Australia within the next 5 years.
-
-      <br />
-      At Auzzie Car Sales, we are driven to provide a top notch car buying and
-      selling experience. We want to take the hassle out of your car buying
-      and selling, so you could focus more on enjoying the ride.
-
-      <br />
+      Welcome to Auzzie Car Sales! Founded in 2024 by a group of passionate young entrepreneurs, Aussie Car Sales is
+      built on a shared love for cars and a commitment to excellence.
+      While we may be new, our team brings extensive experience in the automotive industry, with a clear vision to
+      become Australia's leading car sales company within the next five years.
+      <br>
+      <br>
+      At Aussie Car Sales, our mission is to provide a seamless and enjoyable car buying and selling experience. We
+      strive to take the hassle out of the process so you can focus on what truly matters—enjoying the drive.
+      <br>
+      <br>
     </p>
 
     <p>
-      We are constantly <strong>innovating</strong> new ways to make car
-      buying and selling as easy as possible. Our engineering, product
-      research and design teams all work together to come up with better ideas
-      to do things around just so that the process is a little easier for you.
+      We’re dedicated to <strong>constant innovation</strong>, always seeking new ways to simplify car buying and
+      selling. Our engineering, product research, and design teams work collaboratively to develop better solutions,
+      ensuring the process is as easy and efficient as possible for you.
     </p>
 
     <h2 class="gradient-heading">Our Services</h2>
@@ -59,7 +58,7 @@
     <p>
       We currently source vehicles on our own and also have a marketplace for
       users to be able to signup and create listing of your own. We do not
-      charge a single dollar t`o our customers who want to sell and we wont
+      charge a single dollar to our customers who want to sell and we wont
       ever. This is our promise to our customers. As of today, we offer the
       following services and we strive to add more in the future. 🚀
     </p>
